# SGL

./: CMakeLists.txt  README.md  build_engine.sh  build_engine_hm.sh
capi/: CMakeLists.txt  README.md  sdl_error.h  sgl.c  sgl.cpp  sgl.h  sgl_buffer.cpp  sgl_buffer.h  sgl_compute.cpp  sgl_compute.h  sgl_image.cpp  sgl_image.h
capi/include/: sgl.h  sgl_buffer.h  sgl_compute.h  sgl_error.h  sgl_gpu_ctx.h  sgl_image.h
compute_engine/: CMakeLists.txt  ComputeEngine.cpp  ComputeEngine.h
compute_engine/operators/: BinaryOperator.cpp  UnaryOperator.cpp
compute_engine/operators/impl/: ReLUOperator.cpp  ReLUOperator.h
core/compute/: CMakeLists.txt  ComputeEngine.cpp  ComputeEngine.h  Matrix.cpp
core/compute/operators/: BinaryOperator.h  IOperator.h  Operator.cpp
core/renderer/: CMakeLists.txt
core/renderer/renderer/: Renderer.cpp  Renderer.h  RendererCamera.cpp  RendererCamera.h  RendererLight.h  RendererMesh.cpp  RendererMesh.h  RendererScene.cpp  RendererScene.h
core/sglang/: CMakeLists.txt  README.md  grep_symbol.sh  main.cpp  mlir.cpp
core/sglang/compiler/: ShaderCompiler.cpp
demo/: CMakeLists.txt  main.cpp
demo/2d_renderer_demo/: CMakeLists.txt  Painter.h  main.cpp
demo/3d_renderer_demo/: CMakeLists.txt  GraphicsApp.cpp  main.cpp  offscreen.cpp
demo/3dgs/: 3dgs.cpp  GaussianSplatting3DRenderer.cpp  README.md  SpzModel.cpp  SpzModel.h
demo/compute_demo/: GPUBezierThickLineGenerator.cpp
demo/effect_demo/: main.cpp
demo/inference_demo/: CMakeLists.txt  Config.cpp  Config.h  Infer.cpp  Infer.h  Model.cpp  Model.h  README.md  SafeTensor.cpp  SafeTensor.h  Tokenizer.cpp  Tokenizer.h  TransformerBlock.cpp  TransformerBlock.h  main.cpp
demo/others_demo/: CMakeLists.txt  blender5.cpp
demo/utils/: ImageUtils.cpp  ImageUtils.h
demos/3dgs/: 3dgs.cpp  CMakeLists.txt  GaussianSplatting3DRenderer.cpp  GaussianSplatting3DRenderer.h  SpzModel.cpp  SpzModel.h
demos/others_demo/: CMakeLists.txt  blender5.cpp  main.cpp  thickline.cpp  transform.cpp
effect_engine/: CMakeLists.txt  EffectEngine.cpp  EffectEngine.h  GpuFilter.cpp  GpuFilter.h  GpuFilterCAPI.cpp  GpuFilterCAPI.h  Renderer.cpp  Renderer.h  c_api.cpp  c_api.h  config.h  config.json  filter_config.json  filter_define_example.json  gpu_filter.cpp  gpu_filter.h  himi.h
effect_engine/blend/: BaseBlender.cpp  BaseBlender.h  IBlender.h
effect_engine/blend/impl/: DissolveBlender.cpp  DissolveBlender.h  LighterColorBlender.h  MultiplyBlender.h
effect_engine/blenders/: BaseBlender.cpp  BaseBlender.h  IBlender.h
effect_engine/blenders/impl/: DissolveBlender.cpp  DissolveBlender.h  LighterColorBlender.cpp  LighterColorBlender.h  MultiplyBlender.cpp  MultiplyBlender.h  OverlayBlender.cpp  OverlayBlender.h
effect_engine/compute_graph/: ComputeGraph.cpp  ComputeGraph.h  PipelineComputeGraphNode.cpp
effect_engine/filters/: BaseFilter.cpp  BaseFilter.h  BasicFilter.cpp  BasicFilter.h  IFilter.h
effect_engine/filters/impl/: AccentedEdgeFilter.cpp  AccentedEdgeFilter.h  AverageBlurFilter.cpp  AverageBlurFilter.h  BlackWhiteFilter.cpp  BlackWhiteFilter.h  BlurEdgeFilter.cpp  BlurEdgeFilter.h  ChinesePaintFilter.cpp  ChinesePaintFilter.h  CloudsFilter.cpp  CloudsFilter.h  ColorBalanceFilter.cpp  ColorBalanceFilter.h  ColorPencilSketchFilter.cpp  ColorPencilSketchFilter.h  ColorSeparationFilter.cpp  ColorSeparationFilter.h  ColorhalftoneFilter.cpp  ColorhalftoneFilter.h  (+86 more)
effect_engine/gpu/: VKGPUContext.cpp  VKGPUContext.h  VkGPUBuffer.cpp  VkGPUBuffer.h  VkGPUComputePipeline.cpp  VkGPUComputePipeline.h  VkGPUContext.cpp  VkGPUContext.h  VkGPUDescriptorSet.cpp  VkGPUDescriptorSet.h  VkGPUFramebuffer.cpp  VkGPUFramebuffer.h  VkGPUGraphicsPipeline.cpp  VkGPUGraphicsPipeline.h  VkGPUHelper.cpp  VkGPUHelper.h  VkGPURenderPass.cpp  VkGPURenderPass.h  VkGPUSwapChain.cpp  VkGPUSwapChain.h  vk_enum_string_helper.h
effect_engine/log/: Log.h
effect_engine/operators/: BinaryOperator.cpp  BinaryOperator.h  IOperator.h  UnaryOperator.cpp  UnaryOperator.h
effect_engine/utils/: IOUtils.cpp  IOUtils.h  ImageUtils.cpp  TimeUtils.cpp  TimeUtils.h
engine/ml/: CMakeLists.txt  MLEngine.cpp  MLEngine.h  Matrix.cpp  Matrix.h
engine/renderer/: CMakeLists.txt
examples/inference_demo/: CMakeLists.txt  Config.cpp  Config.h  Infer.cpp  Infer.h  Model.cpp  Model.h  SafeTensor.cpp  SafeTensor.h  Tokenizer.cpp  Tokenizer.h  TransformerBlock.cpp  TransformerBlock.h  main.cpp
gpu_engine/: CMakeLists.txt  Renderer.h  config.h
gpu_engine/gpu/: VkGPUBuffer.cpp  VkGPUBuffer.h  VkGPUComputePipeline.cpp  VkGPUContext.cpp  VkGPUDescriptorSet.cpp  VkGPUDescriptorSet.h  VkGPUGraphicsPipeline.cpp  VkGPUHelper.cpp  VkGPUHelper.h  VkGPUSwapChain.cpp
gpu_engine/log/: Log.h
gpu_engine/operators/: BinaryOperator.h  IOperator.h  UnaryOperator.h
gpu_engine/utils/: IOUtils.cpp  ImageUtils.cpp  ImageUtils.h
ml_engine/: CMakeLists.txt  MLEngine.cpp  MLEngine.h  Matrix.cpp  Matrix.h
ml_engine/operators/: BinaryOperator.cpp  BinaryOperator.h  IOperator.h  UnaryOperator.cpp  UnaryOperator.h
renderer_demo/: CMakeLists.txt  GraphicsApp.cpp  GraphicsApp.h  Renderer.cpp  Renderer.h  main.cpp  offscreen.cpp
renderer_demo/model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
renderer_demo/renderer/: Renderer.cpp  Renderer.h  RendererCamera.cpp  RendererCamera.h  RendererLight.cpp  RendererLight.h  RendererMesh.cpp  RendererMesh.h
renderer_demo/scene/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h
renderer_demo/window/: IWindow.cpp  IWindow.h
runtime/: CMakeLists.txt  config.h
runtime/gpu/: ComputePipelineCache.cpp  ComputePipelineCache.h  VkGPUBuffer.cpp  VkGPUBuffer.h  VkGPUComputePipeline.cpp  VkGPUContext.cpp  VkGPUContext.h  VkGPUDescriptorSet.cpp  VkGPUDescriptorSet.h  VkGPUGraphicsPipeline.cpp  VkGPUHelper.cpp  VkGPUHelper.h  VkGPURenderPass.cpp  VkGPURenderPass.h  VkGPUSwapChain.cpp  VkGPUTexture.cpp  VkGPUTexture.h
runtime/log/: Log.h
runtime/npu/: README.md
runtime/sglang/: README.md  main.cpp
runtime/utils/: IOUtils.cpp  IOUtils.h  ImageUtils.cpp  TimeUtils.cpp  TimeUtils.h
(+880 files in other folders)
